// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`audit journey setup through resume at 110x32: approval 1`] = `
"Waiting for approval · Edit file                                                                              
                                                                                                              
● rottweiler  openai/coding                                                                                   
  ⌄ edit  src/main.rs                                                                       ? approval needed 
  │ Why · Apply the reviewed correction                                                                       
  │ Awaiting approval…                                                                                        
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
╭─ Permission · y once / a session / n deny · Tab to message ────────────────────────────────────────────────╮
│ Edit file src/main.rs                                                                                      │
│ Apply the reviewed correction                                                                              │
│  ▶ Allow once                                                                                              │
│    Run only this invocation                                                                                │
│    Allow session                                                                                           │
│    Remember for this session                                                                               │
│    Allow project                                                                                           │
│    Remember this exact invocation in this project                                                          │
│    Review a permission rule…                                                                               │
│    Review an explicit session pattern                                                                      │
╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────╮ 
 │ Describe a task…                                                                                         │ 
 │ Tab decision/message · Enter choose · Ctrl+P commands                                                    │ 
 ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────╯ 
  EXECUTE   coding  approval · Edit file    ctx —  $—  —                                                      
"
`;

exports[`audit journey setup through resume at 110x32: interrupted with child completion and compaction 1`] = `
"                                                                                                              
● rottweiler  interrupted · USD 0.0010                                                                        
  The edit is ready for review.                                                                               
                                                                                                              
  ⌄ edit  src/main.rs                                                                                       ✓ 
  │ Updated src/main.rs                                                                                       
  ▸ bash  cargo test                                                                              ✓ Completed 
                                                                                                              
Context compacted · 12000 tokens reclaimed                                                                    
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
│ ✓ Review the tests · starting · unpriced                                                                    
│ ╰ Ctrl+G inspect · click a row to open                                                                      
 ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────╮ 
 │ Describe a task…                                                                                         │ 
 │ Ctrl+P commands   Alt+M model   / @ !   Ctrl+E editor    ⏎  send                                         │ 
 ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────╯ 
  EXECUTE   coding    ctx —  $—  —                                                                            
"
`;

exports[`audit journey setup through resume at 80x24: approval 1`] = `
"Waiting for approval · Edit file                                                
                                                                                
● rottweiler  openai/coding                                                     
  ⌄ edit  src/main.rs                                         ? approval needed 
  │ Why · Apply the reviewed correction                                         
  │ Awaiting approval…                                                          
                                                                                
╭─ Permission · y once / a session / n deny · Tab to message ──────────────────╮
│ Edit file src/main.rs                                                        │
│ Apply the reviewed correction                                                │
│  ▶ Allow once                                                                │
│    Run only this invocation                                                  │
│    Allow session                                                             │
│    Remember for this session                                                 │
│    Allow project                                                             │
│    Remember this exact invocation in this project                            │
│    Review a permission rule…                                                 │
│    Review an explicit session pattern                                        │
╰──────────────────────────────────────────────────────────────────────────────╯
 ╭────────────────────────────────────────────────────────────────────────────╮ 
 │ Describe a task…                                                           │ 
 │ Tab decision/message · Enter choose · Ctrl+P commands                      │ 
 ╰────────────────────────────────────────────────────────────────────────────╯ 
  EXECUTE   coding  approval · Edit file    ctx —  $—  —                        
"
`;

exports[`audit journey setup through resume at 80x24: interrupted with child completion and compaction 1`] = `
"                                                                                
● rottweiler  interrupted · USD 0.0010                                          
  The edit is ready for review.                                                 
                                                                                
  ⌄ edit  src/main.rs                                                         ✓ 
  │ Updated src/main.rs                                                         
  ▸ bash  cargo test                                                ✓ Completed 
                                                                                
Context compacted · 12000 tokens reclaimed                                      
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
│ ✓ Review the tests · starting · unpriced                                      
│ ╰ Ctrl+G inspect · click a row to open                                        
 ╭────────────────────────────────────────────────────────────────────────────╮ 
 │ Describe a task…                                                           │ 
 │ Ctrl+P commands   Alt+M model   / @ !   Ctrl+E editor    ⏎  send           │ 
 ╰────────────────────────────────────────────────────────────────────────────╯ 
  EXECUTE   coding    ctx —  $—  —                                              
"
`;
